--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       }
     </script>
 
-    <iframe src="/inframe.html"></iframe>
+    <iframe src="https://kwals.github.io/chrome-bug-iframe"></iframe>
 
     <h3> Steps to reproduce the bug</h3>
     <ol>
