Remove https from iframe source, try relative path

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       }
     </script>
 
-    <iframe src="https://kwals.github.io/chrome-bug-iframe"></iframe>
+    <iframe src="//kwals.github.io/chrome-bug-iframe"></iframe>
 
     <h3> Steps to reproduce the bug</h3>
     <ol>
