--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
     </script>
 
     <iframe
-    srcdoc="data:text/html <html>
-      <head>
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600">
-      </head>
+    srcdoc="<html><head><link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Open+Sans:400,600'></head>
       <body>
         Hello, World!
         This iframe also is requesting the font Open Sans from Google fonts.
